// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirm matches snapshot for signature - personal sign type 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:134:47
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:132:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should match snapshot for signature - typed sign - V4 - PermitBatch 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:237:67
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:236:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should match snapshot for signature - typed sign - V4 - PermitSingle 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:209:67
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:208:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should match snapshot for signature - typed sign - V4 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:182:47
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:180:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should match snapshot for signature - typed sign - permit 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:117:78
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:116:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at processTicksAndRejections (node:internal/process/task_queues:103:5)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should match snapshot signature - typed sign - order 1`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:165:78
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:164:14)
    at Promise.then.completed (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:298:28)
    at new Promise (&lt;anonymous&gt;)
    at callAsyncCircusFn (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/utils.js:231:10)
    at _callCircusTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:316:40)
    at _runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:252:3)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:126:9)
    at _runTestsForDescribeBlock (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:121:9)
    at run (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/run.js:71:3)
    at runAndTransformResultsToJestFormat (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapterInit.js:122:21)
    at jestAdapter (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-circus/build/legacy-code-todo-rewrite/jestAdapter.js:79:19)
    at runTestInternal (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:367:16)
    at runTest (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/runTest.js:444:34)
    at Object.worker (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/jest-runner/build/testWorker.js:106:12)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;

exports[`Confirm should render SmartTransactionsBannerAlert for transaction types but not signature types 1`] = `
<div>
  <div
    class="mm-box multichain-page multichain-page--has-app-header mm-box--display-flex mm-box--flex-direction-row mm-box--justify-content-center mm-box--width-full mm-box--height-full mm-box--background-color-background-default"
    data-testid="multichain-page"
  >
    <div
      class="mm-box confirm_wrapper mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full mm-box--background-color-background-default"
    >
      <div
        class="mm-box mm-box--width-full mm-box--height-full mm-box--background-color-background-default"
        style="min-height: 0; overflow: hidden; position: relative;"
      >
        <div
          class="mm-box mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-flex mm-box--flex-direction-column mm-box--width-full mm-box--height-full"
          style="overflow: auto;"
        >
          <div
            class="mm-box mm-box--padding-top-4 mm-box--padding-bottom-4 mm-box--display-flex mm-box--flex-direction-column mm-box--align-items-center"
          >
            <div
              aria-hidden="true"
              class="relative overflow-hidden rounded"
              data-testid="confirm-title-skeleton"
              style="height: 24px; width: 200px;"
            >
              <div
                aria-hidden="true"
                class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
              />
            </div>
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 60px; width: 60px; margin-top: 32px; margin-bottom: 10px; border-radius: 50%; justify-self: center; align-self: center;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 32px; width: 200px; margin-bottom: 20px; justify-self: center; align-self: center;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            data-testid="confirmation__info_skeleton"
            style="height: 72px; width: 100%; margin-bottom: 12px;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 72px; width: 100%; margin-bottom: 12px;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
          <div
            aria-hidden="true"
            class="relative overflow-hidden rounded"
            style="height: 72px; width: 100%; margin-bottom: 12px;"
          >
            <div
              aria-hidden="true"
              class="pointer-events-none absolute inset-0 rounded bg-icon-alternative motion-safe:animate-skeleton-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Confirm should render SmartTransactionsBannerAlert for transaction types but not signature types 2`] = `
<div>
  <h2>
    Unexpected Application Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot read properties of undefined (reading 'from')
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot read properties of undefined (reading 'from')
    at useSendBundleHwNavigation (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/hooks/hardware-wallets/useSendBundleHwNavigation.ts:37:35)
    at useTransactionConfirm (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/hooks/transactions/useTransactionConfirm.ts:43:30)
    at Footer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/components/confirm/footer/footer.tsx:255:57)
    at renderWithHooks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:15486:18)
    at mountIndeterminateComponent (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:20103:13)
    at beginWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:21626:16)
    at beginWork$1 (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:27465:14)
    at performUnitOfWork (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26599:12)
    at workLoopSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26505:5)
    at renderRootSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26473:7)
    at performSyncWorkOnRoot (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26124:20)
    at flushSyncCallbacks (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:12042:22)
    at flushSync (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:26240:7)
    at legacyCreateRootFromDOMContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29614:5)
    at legacyRenderSubtreeIntoContainer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29640:12)
    at Object.render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom.development.js:29731:10)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:101:25
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at render (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/@testing-library/react/dist/pure.js:97:26)
    at renderer (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/render-helpers-navigate.js:165:10)
    at renderWithConfirmContextProvider (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/test/lib/confirmations/render-helpers.tsx:30:28)
    at /Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:278:61
    at act (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react/cjs/react.development.js:2512:16)
    at actWithWarning (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1740:10)
    at Object.&lt;anonymous&gt; (/Users/montelai/consensys/worktrees/hw-split-20260626192518/10-signing-enable/ui/pages/confirmations/confirm/confirm.test.tsx:277:14)
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      ErrorBoundary
    </code>
     or
     
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     prop on your route.
  </p>
</div>
`;
